<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="15dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="15dp"
            android:layout_height="140dp"
            android:scaleType="center"
            android:src="@drawable/bg_left_corner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="monospace"
                android:text="@string/negara"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/positif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/positif"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sembuh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sembuh"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/meninggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meninggal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dirawat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dirawat"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>