<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_card"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_corner"
        android:text="Register"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/et_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        android:layout_centerInParent="true"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:paddingHorizontal="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/nama" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/register_title"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo_only_smkcoding" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_above="@id/et_card"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:text="@string/user_register"/>

</RelativeLayout>