<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="monospace"
            android:text="@string/home_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <include layout="@layout/indo_item">

        </include>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_indo"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>


        <TextView
            android:id="@+id/bt_country"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_countries"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/bt_kasus"
                android:layout_width="170dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_left_corner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daftar_kasus"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bt_rs"
                android:layout_width="170dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_left_corner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daftar_rs_rujukan"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bt_hotline"
                android:layout_width="170dp"
                android:layout_height="90dp"
                android:layout_below="@id/bt_kasus"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_left_corner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daftar_hotline"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bt_gejala"
                android:layout_width="170dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/bt_rs"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_left_corner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gejala"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>